--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-image: url('123.jpg'); /* Thay thế 'your_image.jpg' bằng đường dẫn đến hình ảnh của bạn */
+            background-image: url('web.jpg'); /* Thay thế 'your_image.jpg' bằng đường dẫn đến hình ảnh của bạn */
             background-size: cover;
             display: flex;
             flex-direction: column;
