--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <title>Thùng Rác Thông Minh</title>
+    <link rel="stylesheet" href="style.css"> </head>
     <style>
         body {
             margin: 0;
-            font-family: Arial, sans-serif;
             background-image: url('web.jpg'); /* Thay thế 'your_image.jpg' bằng đường dẫn đến hình ảnh của bạn */
             background-size: cover;
             display: flex;
@@ -33,5 +33,15 @@
         const dateElement = document.getElementById('date');
         dateElement.textContent = today.toLocaleDateString();
     </script>
+</body>
+<body>
+    <footer>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.tiktok.com/" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/de12a34e33.js" crossorigin="anonymous"></script>
 </body>
 </html>
