--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
         <a href="https://www.tiktok.com/" target="_blank"><i class="fab fa-tiktok"></i></a>
-        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.youtube.com/@hoangtu8214/" target="_blank"><i class="fab fa-youtube"></i></a>
     </footer>
 
     <script src="https://kit.fontawesome.com/de12a34e33.js" crossorigin="anonymous"></script>
