--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         body {
             margin: 0;
-            background-image: url('web.jpg'); /* Thay thế 'your_image.jpg' bằng đường dẫn đến hình ảnh của bạn */
+            background-image: url('hinh1.jpg'); /* Thay thế 'your_image.jpg' bằng đường dẫn đến hình ảnh của bạn */
             background-size: cover;
             display: flex;
             flex-direction: column;
