--- a/index.html
+++ b/index.html
@@ -4,15 +4,9 @@
     <title>Thùng Rác Thông Minh</title>
     <link rel="stylesheet" href="style.css"> </head>
     <style>
-        body {
-            margin: 0;
-            background-image: url('hinh1.jpg'); /* Thay thế 'your_image.jpg' bằng đường dẫn đến hình ảnh của bạn */
-            background-size: cover;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
+        <body>
+            <img src="hinh1.jpg" alt="Mô tả hình ảnh">
+        </body>
 
         h1 {
             color: white;
