--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css"> </head>
     <style>
         <body>
-            <img src="hinh1.jpg" alt="Mô tả hình ảnh">
+            <img src="hinh1.jpg" alt="">
         </body>
 
         h1 {
