--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <style>
         <body>
             <img src="hinh1.jpg" alt="">
+            margin: 0;
+            background-size: cover;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         </body>
 
         h1 {
