--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" href="style.css"> </head>
     <style>
         <body>
-            <img src="hinh1.jpg" alt="">
-            margin: 0;
+           margin: 0;
+            font-family: Arial, sans-serif;
+            background-image: url('hinh1.jpg'); /* Thay thế 'your_image.jpg' bằng đường dẫn đến hình ảnh của bạn */
             background-size: cover;
             display: flex;
             flex-direction: column;
