--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         <body>
            margin: 0;
-            font-family: Arial, sans-serif;
+            font-family: 'Times New Roman', serif;
             background-image: url('hinh1.jpg'); /* Thay thế 'your_image.jpg' bằng đường dẫn đến hình ảnh của bạn */
             background-size: cover;
             display: flex;
