--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <div class="content">
             </div>
-        <div class="footer">
-            <p>Email: minhhoang12tn237@gmail.com, SĐT: 0342685774, Địa chỉ: KTX khu B Đông Hòa Dĩ An Bình Dương</p>
+        <div class="running-text">
+            "minhhoang12tn237@gmail.com, SĐT: 0342685774, Địa chỉ: KTX khu B Đông Hòa Dĩ An Bình Dương"
         </div>
     </div>
     <script src="script.js"></script>
