--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background: linear-gradient(to right, pink, lightyellow); /* Pink to light yellow gradient */
-            font-family: Arial, sans-serif;
+            font-family: Times New Roman, serif;
             color: #333;
             margin: 0;
             padding-bottom: 60px; /* Space for the scrolling text */
@@ -73,9 +73,9 @@
     <h1>Dữ liệu từ ESP32</h1>
     <table>
         <tr>
+            <th>Lần bấm thứ</th>
             <th>Thời gian</th>
-            <th>Số lần bấm nút</th>
-            <th>Âm thanh (Base64)</th>
+            <th>Âm thanh</th>
         </tr>
     </table>
 
